fix issue preventing less compile: @zindex-modal-background variable missing on mobile-angular-ui

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,2 +1,3 @@
+@zindex-modal-background: #fff;
 @brand-primary: #eb780a;
 @brand-primary-soft : #f1b882;
